--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         }
     ],
     "require": {
-        "laravel/framework": "^8.0",
-        "veldman/laravel-components": "dev-master"
+        "laravel/framework": "^8.0|^9.0",
+        "livewire/livewire": "^2.10"
     },
     "autoload": {
         "psr-4": {
@@ -37,5 +37,8 @@
                 "Veldman\\Admin\\AdminServiceProvider"
             ]
         }
+    },
+    "require-dev": {
+        "orchestra/testbench": "^6.0|^7.4"
     }
 }
