--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     ],
     "require": {
         "laravel/framework": "^8.0|^9.0",
-        "livewire/livewire": "^2.10"
+        "livewire/livewire": "^2.10",
+        "laravel/ui": "^3.4"
     },
     "autoload": {
         "psr-4": {
